[project]
name = "sabkra"
version = "0.1.0"
description = ""
authors = [
    {name = "AcipenserSturio", email = "AcipenserSturio@users.noreply.github.com"},
]
dependencies = [
    "pygame>=2.5.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
build = "python -m sabkra"
